Changed to np.power

--- a/ostu.ipynb
+++ b/ostu.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "L = 256 # Gray levels\n",
-    "image_path = 'test.jpg'\n",
+    "image_path = '../test.jpg'\n",
     "image = Image.open(image_path).convert('L')\n",
     "image_array = np.array(image)"
    ]
@@ -108,7 +108,7 @@
    "source": [
     "ω = lambda k: np.sum(P[:k+1])\n",
     "μ = lambda k: np.sum([i*P[i] for i in range(k+1)])\n",
-    "var = lambda μ, range: np.sum([(i-μ)**2*P[i] for i in range])\n",
+    "var = lambda μ, range: np.sum([np.power(i-μ, 2)*P[i] for i in range])\n",
     "μ_T = μ(L-1)\n",
     "\n",
     "ω_0 = lambda k: ω(k)\n",
@@ -118,7 +118,7 @@
     "var_0 = lambda k: var(μ_0(k), range(0,k+1))\n",
     "var_1 = lambda k: var(μ_1(k), range(k+1, L))\n",
     "var_W = lambda k: ω_0(k)*var_0(k) + ω_1(k)*var_1(k) # within class variance\n",
-    "var_B = lambda k: ω_0(k)*ω_1(k)*(μ_0(k) - μ_1(k))**2 # between class variance\n",
+    "var_B = lambda k: ω_0(k)*ω_1(k)*np.power(μ_0(k) - μ_1(k), 2) # between class variance\n",
     "var_T = lambda k: var_W(k) + var_B(k)\n",
     "λ = lambda k: var_B(k) / var_W(k)\n",
     "κ = lambda k: var_T(k) / var_B(k)\n",
